		- Tags, resolverurls, icons etc. are read from a config file.
		  This eases up future extensions of IDs known by Scid
		- If no config exists create a default one handling FIDE, ICCF, DSB, BCF, VIAF, SM
		- Each ID has to link to a unique page, multiple links are not possible
		- PND is still special as it is used to link to various complex
		  locations like Wikipedia (including NLS) and SeeAlso. This is
		  still treated internally
	* Add "Open Comment editor" to PGN context menu
	* Add common NAG symbols to PGN context menu (Thanks to G. Lorscheid)
- Fixes :
	* Fixed a bug in exception handling of Novag Citrine connection
	* FICS console uses fixed font
	* allow Elo-rating corrections up to 2015
	* Correct move numbers in engine PV output in locked mode
	  (http://sourceforge.net/tracker/index.php?func=detail&aid=3001826&group_id=26963&atid=389080)
	* Limit the history list of FEN notation in board setup (thanks to Steve)
	* Remove some CE-engines not in the default distribution from Makefile.conf
	* HTML export
	    - Corrected display of player names (no {} pair around it)
	    - Move comments are rendered according css style
	* Duplicate games display did not highlight correctly
	* It was not possible to remove a tb directory
	* Allow for Phalanx XXIII as a version of Phalanx, as it includes all patches necessary for Scid
	* Crash when replacing a game in certain languages (Thanks to Milan Zamazal)
	* Game annotation inrush fix, mainly noticeable with batch annotation without using book
	* Repair annotation lockup with UCI engines that announce their bestmove before being stopped
	  when they see a forced mate (stockfish...)
- Language updates:
	* brazilian portugese translation (thanks ot Gilberto de Almeida Peres)
	* nederland translation (thanks to Leander Laruelle)
	* spanish translation (thanks to Benigno Hernandez)
	* czech translation (thanks to Milan Zamazal)
	* NEW: suomi translation (thanks to Timo Pirinen)
- Help:
	* Add UTF-8 NAG-symbols